name:                haskellytics
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskellytics#readme
license:             BSD3
license-file:        LICENSE
author:              Patrick Allen
maintainer:          allenpatrick86@gmail.com
copyright:           2017
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskellytics
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       time,
                       scotty,
                       aeson
